# Hackathon_Big_Data_2025

./: LICENSE  README.md  dashboard.py  hello.py  pyproject.toml
notebooks/: eda.ipynb  eda_check_qtd_values.ipynb  feature_eng.ipynb  model_initial_testings.ipynb
submissions/: submission_model_v1.parquet  submission_model_v2.parquet
