[project]
name = "hackathon-big-data-2025"
version = "0.1.0"
description = "Hackathon Big Data 2025 project developed by GAMA team."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autorootcwd>=1.0.1",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "marimo>=0.15.2",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
]
